applications/forgejo/backend.policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: forgejo-backend-traffic
  namespace: forgejo
spec:
  mergeType: StrategicMerge
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: forgejo
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: "Headers"
      headers:
        - name: "Cookie"
        - name: "User-Agent"
